src/common/products/springprox/api/springprox.h

  typedef signed short SWORD;
    typedef uint8_t  BOOL;
    typedef uint8_t  BYTE;
    typedef uint16_t WORD;
    typedef int16_t  SWORD;
    typedef uint32_t DWORD;
        typedef wchar_t TCHAR;
        typedef char TCHAR;
/* Library identification */
/* ---------------------- */

SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_GetLibrary(TCHAR library[], WORD len);
/* Return code to error message translation */
/* ---------------------------------------- */
SPRINGPROX_LIB const TCHAR   *SPRINGPROX_API SPROX_GetErrorMessage(SWORD status);
/* Retrieve reader's firmware (type - version) */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderGetFirmware(TCHAR firmware[], WORD len);
/* Retrieve actual features of reader's firmware */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderGetFeatures(DWORD *features);
/* Read configuration constants of the reader */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderGetConsts(DWORD *consts);
/* Write configuration constants of the reader */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderSetConsts(DWORD consts);
/* Read advanced configuration constants of the reader */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderGetConstsEx(BYTE ident, BYTE consts[], WORD *length);
/* Write advanced configuration constants of the reader */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderSetConstsEx(BYTE ident, const BYTE consts[], WORD length);
/* Drive the buzzer */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ControlBuzzer(WORD time_ms);
/* Read the MODE pin */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ControlReadModeIO(BOOL *in_value);
/* Drive the RF field */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ControlRF(BYTE param);
/* Retrieve RF chipset's information (NXP RC type and serial number) */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ReaderGetRc500Id(BYTE micore_type[5], BYTE micore_snr[4]);
/* Send a raw control command to the reader */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ControlEx(const BYTE send_buffer[], WORD send_bytelen, BYTE recv_buffer[], WORD *recv_bytelen);
/* Test communication with the reader */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_Echo(WORD len);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_A_Exchange(const BYTE send_buffer[], WORD send_bytelen, BYTE recv_buffer[], WORD *recv_bytelen, BYTE append_crc, WORD timeout);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_B_Exchange(const BYTE send_buffer[], WORD send_bytelen, BYTE recv_buffer[], WORD *recv_bytelen, BYTE append_crc, WORD timeout);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_Card_PowerUp_Auto(BYTE slot, BYTE atr[32], WORD *atr_len);
/* Power down the card in a slot */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_Card_PowerDown(BYTE slot);
/* Exchange with the card in a slot */
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_Card_Exchange(BYTE slot, const BYTE send_buffer[], WORD send_len, BYTE recv_buffer[], WORD *recv_len);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_ArrayToString(TCHAR *string, const BYTE *buffer, WORD size);
SPRINGPROX_LIB SWORD SPRINGPROX_API SPROX_StringToArray(BYTE *buffer, const TCHAR *string, WORD size);
SPRINGPROX_LIB SWORD SPRINGPROX_API Mf500PiccAuth(BYTE auth_mode, BYTE key_sector, BYTE block);
SPRINGPROX_LIB SWORD SPRINGPROX_API Mf500PiccAuthRam(BYTE auth_mode, BYTE key_sector, BYTE block);
SPRINGPROX_LIB SWORD SPRINGPROX_API WriteRIC(BYTE reg, BYTE value);