src/common/products/springprox/api/uSpringProxDll.pas


// User IO, added 18/01/2011
function SPROX_ControlReadModeIO(var value : boolean) : sword; cdecl; external 'springprox.dll';

function SPROX_ControlEx(send_buffer : pointer; send_bytelen : word; recv_buffer : pointer; recv_bytelen : pointer) : sword; cdecl; external 'springprox.dll';
function SPROX_ControlBuzzer(duration_ms : word) : sword;

function SPROX_ControlRF(rf : byte) : sword; cdecl; external 'springprox.dll';
function SPROX_ReaderGetConsts(var ct : longword) : sword; cdecl; external 'springprox.dll';
function SPROX_ReaderSetConsts(ct : longword) : sword; cdecl; external 'springprox.dll';

function SPROX_ReaderGetConstsEx(ident : byte; value : pointer; length : pointer) : sword; cdecl; external 'springprox.dll';
function SPROX_ReaderSetConstsEx(ident : byte; value : pointer; length : word) : sword; cdecl; external 'springprox.dll';

function SPROX_ReaderGetFeatures(features : pointer) : sword; cdecl; external 'springprox.dll';

function SPROX_Echo(len : sword) : sword; cdecl; external 'springprox.dll';

function SPROX_A_Exchange(send : pointer; sendlen : word; recv : pointer; recvlen : pointer; append_crc : byte; timeout : word) : sword; cdecl; external 'springprox.dll';
function SPROX_B_Exchange(send : pointer; sendlen : word; recv : pointer; recvlen : pointer; append_crc : byte; timeout : word) : sword; cdecl; external 'springprox.dll';

// Low level API calls, available for demonstration purpose only
function Mf500PiccAuthRam(auth_mode : byte; key_sector : byte; block : byte) : sword; cdecl; external 'springprox.dll';
function Mf500PiccAuth(auth_mode : byte; key_sector : byte; block : byte) : sword; cdecl; external 'springprox.dll';

function WriteRIC(reg : byte; value : byte) : sword; cdecl; external 'springprox.dll';

function SPROX_Card_PowerUp_Auto(slot : byte; atr : pointer; atr_len : pointer) : sword; cdecl; external 'springprox.dll';
function SPROX_Card_PowerDown(slot : byte) : sword; cdecl; external 'springprox.dll';
function SPROX_Card_Exchange(slot : byte; send_buffer : pointer; send_len : word; recv_buffer : pointer; recv_len : pointer) : sword; cdecl; external 'springprox.dll';

const
   key_type_a : char = 'A';
   key_type_b : char = 'B';

   // Mifare sample access keys
   // -------------------------

   key_aaaaaa : mif_key = ($A0, $A1, $A2, $A3, $A4, $A5); // standardized 'base A' key
   key_bbbbbb : mif_key = ($B0, $B1, $B2, $B3, $B4, $B5); // standardized 'base B' key
   key_ffffff : mif_key = ($FF, $FF, $FF, $FF, $FF, $FF); // commonly used transport key
   key_000000 : mif_key = ($00, $00, $00, $00, $00, $00); // commonly used transport key

   key_demo_a : mif_key = ($44, $45, $4D, $4F, $5F, $41); // the word 'DEMO_A'
   key_demo_b : mif_key = ($44, $45, $4D, $4F, $5F, $42); // the word 'DEMO_B'

   key_demo_a_ : mif_key = ($41, $5F, $4F, $4D, $45, $44); // the word 'DEMO_B'
   key_demo_b_ : mif_key = ($42, $5F, $4F, $4D, $45, $44); // the word 'DEMO_B'

   key_test_a : mif_key = ($54, $45, $53, $54, $5F, $41); // the word 'TEST_A'
   key_test_b : mif_key = ($54, $45, $53, $54, $5F, $42); // the word 'TEST_B'

   // access condition for Mifare data blocks (blocks 0 to 2 of each sector)
   acc_normal   : byte  = $04; // use keyA for read, key B for read/write
   acc_counter  : byte  = $06; // use keyA for read/decrement, key B for read/write/decrement/increment

   // access condition for Mifare access control blocks (block 3 of each sector)
   acc_security : byte  = $03; // keyB is sector's master key

implementation

uses SysUtils;

function SPROX_GetErrorMessageStr(status : sword) : string;
begin
   result := StrPas(SPROX_GetErrorMessage(status));
end;

function SPROX_GetLibraryStr : string;
var
   sb : array[1..256] of char;
begin
   result := '';
   if SPROX_GetLibrary(pchar(@sb), sizeof(sb)) = 0 then result := StrPas(pchar(@sb));
end;

function SPROX_ReaderGetFirmwareStr : string;
var
   sb : array[1..256] of char;
begin
   result := '';
   if SPROX_ReaderGetFirmware(pchar(@sb), sizeof(sb)) = 0 then result := StrPas(pchar(@sb));
end;

function SPROX_ReaderGetRc500SnrStr : string;
var
   rc500_type : array[1..5] of byte;
   rc500_snr  : array[1..4] of byte;
   i : integer;
begin
   result := '';
   if SPROX_ReaderGetRc500Id(@rc500_type, @rc500_snr) = 0 then
      for i := 1 to 4 do result := result + IntToHex(rc500_snr[i], 2);
end;

function SPROX_ArrayToStringStr(buffer : pointer; size : word) : string;
var
   sb : array[1..1024] of char;
begin
   result := '';
   if SPROX_ArrayToString(pchar(@sb), buffer, size) = 0 then result := StrPas(pchar(@sb));
end;

function SPROX_StringToArrayStr(buffer : pointer; str : string; size : word) : sword;
begin
   result := SPROX_StringToArray(buffer, pchar(str), size);
end;

function SPROX_ControlBuzzer(duration_ms : word) : sword;
var
   buf : array[0..2] of byte;
begin
   buf[0] := $1C;
   buf[1] := duration_ms div 256;
   buf[2] := duration_ms mod 256;
   result := SPROX_ControlEx(@buf, 3, nil, nil);
end;

end.


